# robotics-spring2023

./: README.md
FUMTI/fumti/: CMakeLists.txt
FUMTI/fumti_config/: CMakeLists.txt  package.xml
FUMTI/hello_moveit/: package.xml
FUMTI/outputs/: 2.m4v
assignments/assignment0/: README.md  assignment0.md
assignments/assignment1/: README.md
assignments/assignment2/: README.md
assignments/assignment3/: README.md
assignments/assignment5/: README.md
assignments/assignment6/: README.md
eddie_kinect_laserscan/: setup.cfg  setup.py
eddie_kinect_laserscan/launch/: eddie_kinect_laserscan.launch.py
eddie_kinect_laserscan/rviz/: config.rviz
labs/lab0/: README.md
labs/lab1/: README.md
labs/lab1/turtle_chaser/: package.xml  setup.cfg  setup.py
labs/lab1/turtle_chaser/launch/: turtlechaser.launch.py
labs/lab1/turtle_chaser/turtle_chaser/: controller.py  spawner.py  util.py
labs/lab2/: README.md
labs/lab3/: README.md
labs/lab4/: README.md
labs/lab5/: README.md
labs/lab7/: README.md
labs/lab8/: README.md
labs/lab9/: README.md
maze/: package.xml  setup.cfg  setup.py
maze/launch/: maze.launch.py
multi_language_publisher_subscriber/alicesim/: setup.py
multi_language_publisher_subscriber/bobsim/: CMakeLists.txt
rgb_navigate/: package.xml  setup.py
rgb_navigate/launch/: rgb_navigate.launch.py
rgb_navigate/rgb_navigate/: rgb_navigate.py
simple_differntial_drive/: setup.py
simple_differntial_drive/launch/: simple_differntial_drive.launch.py
turtlemania/: package.xml  setup.cfg
turtlesim_controller/: setup.py
(+81 files in other folders)
